kubernetes/apps/default/opengist/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: opengist
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`opengist.${SECRET_DOMAIN}`)
      # middlewares:
      #   - name: default
      #   # - name: basicauth
      services:
        - name: opengist
          namespace: default
          port: 6157
        - name: opengist
          namespace: default
          port: 2222
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
